<resources>
    <string name="app_name">Big2</string>
    <string name="play_game">Play Game</string>
    <string name="rules">Rules</string>
    <string name="exit">Exit</string>
    <string name="title_activity_objective">Leanback ObjectiveActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <string-array name="game_status_array">
        <item>All</item>
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <!-- rules_xxxx.xml bolded sentences (necessary for specific  words to be bolded) -->
    <string name="obj_round_text"><b>Every Round:</b> Be the first player to play all your cards.</string>
    <string name="obj_overall_text"><b>Overall:</b> Have the <b>lowest cumulative score</b> at the end of the game.</string>
    <string name="obj_ranking_text">• Suits (ascending): <b>♦ &lt; ♣ &lt; ♥ &lt; ♠&#10;</b>\n• Ranks (ascending): <b>3 &lt; 4 &lt; 5 &lt; ... &lt; K &lt; A &lt; 2 </b>(2 is highest)</string>

    <string name="setup_13card_text">• Each player will get <b>13</b> cards.</string>
    <string name="setup_game1_text">• <b>Game 1</b>: The player with the <b>3 of Diamonds</b> goes first and must include it in their first play.</string>
    <string name="setup_afterwards_text">• <b>Afterwards</b>: The player who won the last game goes first and can play anything they want.</string>
    <string name="setup_direct_text">• <b>Direction</b>: Play proceeds <b>clockwise</b> on game 1 and alternates after every game.</string>

    <string name="turn_combinRanks_text">• Combinations: <b>Single Card &lt; Pair &lt; Triple</b></string>
    <string name="turn_5cardRanks_text">• Five-card combos:\n<b>Combinations &lt; Straight &lt; Flush &lt; Full House &lt; Four of a Kind + 1 extra &lt; Straight Flush &lt; Royal Flush</b></string>

    <string name="hands_straight_text"><b>Straight:</b> 5 cards in sequence (e.g., 3-4-5-6-7). </string>
    <string name="hands_flush_text"><b>Flush:</b> 5 cards of the same suit.</string>
    <string name="hands_fullhouse_text"><b>Full House:</b> 3 cards of one rank + 2 cards of another rank.</string>
    <string name="hands_fourkind_text"><b>Four of a Kind + 1 Extra:</b> 4 cards of one rank + 1 side card.</string>
    <string name="hands_strRoy_text"><b>Straight Flush:</b> 5 cards in sequence, all of the same suit.</string>

    <string name="win_lastCard_text">When a player has one card left, they must call <b>“last card”</b>. During this state, the person before them <b>must play their highest playable card</b> if singles are being played."</string>
    <string name="win_1to10cards_text"><b>• 1–10 cards:</b> standard points (e.g., +1 or +2).</string>
    <string name="win_11to12cards_text"><b>• 11–12 cards:</b> double points (e.g., +22 or +24).</string>
    <string name="win_13cards_text"><b>• 13 cards:</b> triple points (e.g., +39).</string>

    <string name="score_tracking_text">• Each player\'s <b>penalty points</b> are tracked cumulatively across rounds.</string>
    <string name="score_lowestScore_text">• The player with the <b>lowest cumulative score</b> at the end wins.</string>

</resources>